tests/compile_tests/invalid_variant.stderr
error: #[int_enum] not supported for non valued variants
 --> $DIR/invalid_variant.rs:7:5
  |
7 |     Invalid,
  |     ^^^^^^^

error: #[int_enum] not supported for non valued variants
 --> $DIR/invalid_variant.rs:8:5
  |
8 |     AlsoInvalid,
  |     ^^^^^^^^^^^
